--- a/Personal_Page/style.css
+++ b/Personal_Page/style.css
@@ -10,20 +10,21 @@
     height: 100vh;
     position: relative;
     background-color: rgb(22, 21, 21);
+    background-image: linear-gradient(rgb(16, 15, 15), rgba(22, 1, 1, 0.386),rgba(244, 0, 0, 0.063));
 }
 .logo{
    float: left;
-    width: 50px;
-    padding: 5px 5px;
-    margin-top: 10px;
-    margin-left: 25px;
+    width: 120px;
+    padding: 0px 5px;
+    margin-top: -10px;
+    margin-left: 20px;
     
     
 }
 nav{
     float: right;
-    margin-top: 10px;
-    margin-right: 100px;
+    margin-top: 5px;
+    margin-right: 80px;
     padding: 20px 0;
    
 }
@@ -32,8 +33,7 @@ nav ul{
 }
 nav li{
     display: inline-block;
-    margin-left: 30px;
-   
+    margin-left: 10px;
 
 }
 nav ul li a{
@@ -80,12 +80,12 @@ span{
     font-family: 'Libre Bodoni', serif
 }
 .col_1 h3{
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 .col_1 p{
     color: white;
     line-height: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 .col_1 a{
     margin-left: 20px;
@@ -100,6 +100,10 @@ span{
 .col_1 a:hover{
     background-color:rgba(169, 2, 2, 0.407);
    
+}
+.skill h1{
+    font-size: 25px;
+    margin-left: 30px;
 }
 .col_2{
     position: absolute;
@@ -146,7 +150,78 @@ span{
     top: 25%;
     right: 15%;
     opacity: .7;
-    box-shadow:10px 10px 10px rgba(169, 2, 2, 0.407);
+    box-shadow:5px 5px 15px rgba(169, 2, 2, 0.407);
     border-radius: 50px 0px 50px 0px;
+    border: 3px inset rgba(169, 2, 2, 0.407);
 }
-/*CSS for Contact page
+/*CSS for Contact page*/
+.contact{
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: linear-gradient(rgba(0,0,0,0.7), red)
+}
+form{
+    width: 90%;
+    max-width: 600px;
+    
+}
+.input-group{
+    margin-bottom: 30px;
+    position: relative;
+}
+input,textarea{
+    width: 100%;
+    padding: 10px;
+    outline: 0;
+    border: 1px solid white;
+    background: transparent;
+    font-size: 15px;
+    color: white;
+}
+label{
+    height: 100%;
+    position: absolute;
+    left: 0;
+    margin-top: 10px;
+    margin-left: 10px;
+    padding: 0;
+    color: white;
+    cursor: text;
+    transition: 1s;
+}
+button{
+    padding: 10px 0;
+    color: white;
+    outline: none;
+    background: transparent;
+    border: 1px solid white;
+    width: 100%;
+    cursor: pointer;
+}
+input:focus~label,
+input:valid~label,
+textarea:focus~label,
+textarea:valid~label
+{
+    top: -35px;
+    font-size: 14px;
+}
+.row{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+}
+.row .input-group{
+    flex-basis: 48%
+}
+h2{
+    text-align: center;
+    margin-bottom: 30px;
+    width: 100%;
+    color: white;
+    border-bottom: 1px solid white;
+}
+/*CSS for About-me page*/
