--- a/Personal_Page/style.css
+++ b/Personal_Page/style.css
@@ -2,15 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-   
+    font-family: 'Open Sans', serif;
+  
 }
 .container{
     width: 100%;
     height: 100vh;
-    position: relative;
-    background-color: rgb(22, 21, 21);
-    background-image: linear-gradient(rgb(16, 15, 15), rgba(22, 1, 1, 0.386),rgba(244, 0, 0, 0.063));
+    position: Absolute;
+    background-color: rgb(232, 232, 232);
+    background-size: cover;
+    background-image: linear-gradient(rgb(16, 15, 15), rgba(0, 0, 0, 0.286),rgba(12, 130, 151, 0.392)),url("photos/personal_background.jpg");
 }
 .logo{
    float: left;
@@ -19,7 +20,6 @@
     margin-top: -10px;
     margin-left: 20px;
     
-    
 }
 nav{
     float: right;
@@ -27,6 +27,12 @@ nav{
     margin-right: 80px;
     padding: 20px 0;
    
+}
+.dropdown{
+    width: 50px;
+    height: 50px;
+    float: right;
+    display: none;
 }
 nav ul{
     list-style: none;
@@ -48,7 +54,7 @@ nav ul li a::after{
     content: '';
     height: 2px;
     width: 0;
-    background: rgb(204, 1, 1);
+    background: rgb(0, 121, 117);
     position: absolute;
     left: 0;
     bottom: 0px;
@@ -59,9 +65,9 @@ nav ul li a:hover::after{
     width: 100%;
 } 
 span{
-    color: rgb(204, 1, 1);
+    color: rgb(0, 121, 117);
+    text-shadow: 1px 1px black;
     cursor:default;
-    
 }
 
 .col_1{
@@ -70,6 +76,8 @@ span{
     width: 30%;
     height: 70%;
     margin-left: 175px;
+    margin-top: -25px;
+    cursor:default;
     
 }
 .col_1 h1{
@@ -77,33 +85,77 @@ span{
     font-size: 60px;
     line-height: 70px;
     margin-bottom: 10px;
-    font-family: 'Libre Bodoni', serif
+    font-family: 'Libre Bodoni', serif;
+    text-shadow: 2px 2px rgb(0, 121, 117);
 }
 .col_1 h3{
     margin-bottom: 5px;
+    font-weight: 600;
+    font-size: 25px;
+    text-shadow:2px 2px rgb(16, 15, 15);
+    border-style: 1px solid black;
 }
 .col_1 p{
     color: white;
     line-height: 20px;
     margin-bottom: 20px;
 }
-.col_1 a{
+.about_button{
     margin-left: 20px;
     padding: 10px 15px;
     font-size: 15px;
     border-radius: 10px 0px 10px 0px;
-    border: 1px solid rgb(204, 1, 1);
+    border: 2px inset rgb(0, 121, 117);
+    box-shadow: 1px 1px rgb(0, 121, 117);
     color: white;
     text-decoration: none;
     transition: all .8s ease;
 }
-.col_1 a:hover{
-    background-color:rgba(169, 2, 2, 0.407);
+.about_button:hover{
+    background-color:white;
+    color: rgb(0, 121, 117);
    
 }
+.skill{
+    position: absolute;
+    top: 60%;
+    left: 20%;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+    cursor:default;
+}
 .skill h1{
-    font-size: 25px;
-    margin-left: 30px;
+    margin-top: 10px;
+    text-shadow: 1px 1px rgb(0, 121, 117);
+    margin-bottom: 10px;
+    color: white;
+    font-size: 35px;
+    letter-spacing: 5px;
+    text-align: center;
+    font-family: 'Water Brush', cursive;
+    border-bottom: 2px solid white;
+
+}
+.skill-icons{
+    color:white;
+    display:flex;
+    justify-content:space-between;
+}
+.JS{
+    margin-left: 15px;
+}
+.skill-title h3{
+    font-size: 20px;
+}
+.img img{
+    width: 40px;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 20px;
+}
+.img, .html{
+    margin-left: 5px;
 }
 .col_2{
     position: absolute;
@@ -113,7 +165,7 @@ span{
     flex-direction:column;
     right: 0%;
     top: 40%;
-    border-left:1px solid rgba(169, 2, 2, 0.407);
+    border-left:1px solid rgba(18, 194, 185, 0.892);
 
    
 }
@@ -121,6 +173,7 @@ span{
     vertical-align: middle;
     text-decoration: none;
     color: white;
+    font-size: 15px;
     padding-top: 5px;
     padding-left: 10px;
     padding-bottom: 0px;
@@ -131,7 +184,8 @@ span{
    
 }
 .col_2 a:hover{
-   background-color: rgba(169, 2, 2, 0.207);
+   background-color: rgb(0, 121, 117,0.2);
+   
    
 }
 .col_2 a img{
@@ -145,31 +199,151 @@ span{
 }
 .col_3 img{
     position: absolute;
-    width: 350px;
+    width:350px;
     height: 400px;
-    top: 25%;
+    top: 20%;
     right: 15%;
-    opacity: .7;
-    box-shadow:5px 5px 15px rgba(169, 2, 2, 0.407);
-    border-radius: 50px 0px 50px 0px;
-    border: 3px inset rgba(169, 2, 2, 0.407);
+    opacity: 1;
+    border-radius: 50% 0 50% 0;
+    box-shadow: 5px 5px 50px rgba(18, 194, 185, 0.892);
+  
 }
+
+@media screen and (min-width: 620px) and (max-width: 980px){
+    .col_1{
+        position: absolute;
+        left: 5%;
+        margin-left: 0;
+        height: 25%;
+        
+    }
+    .col_1 h1{
+        font-size: 70px;
+        
+    }
+     .skill{
+         left: 15%;
+         top: 60%;
+         position: absolute;
+         width: 60%;
+        margin-top: 30px;
+        margin-left: 50px;
+    }
+    .about_button{
+        margin-top: 10px;
+        position: absolute;
+        top: 90%;
+        left: 35%;
+    }
+  nav ul{
+    display: none;
+  }
+  .dropdown{
+      position: absolute;
+      display: block;
+      top: 1%;
+      right: 1%;
+      width: 100px;
+      height: 100px;
+        margin: 0;
+  }
+  .col_3 img{
+      top: 20%;
+      right: 15%;
+      width: 250px;
+      height: 300px;
+  }
+  #leaf{
+     display: none;
+  }
+  #leaf2{
+     display: none;
+  }
+}
+
+@media screen and (min-width: 350px) and (max-width: 540px){
+    .col_1{
+        position: absolute;
+        top: 15%;
+        left: 35%;
+        height: 25%;
+        margin-left: 0;
+        line-height: 25px;
+        
+    }
+    .col_1 h1{
+        font-size: 40px;
+        line-height: 50px;
+        margin: 0;
+    }
+     .skill{
+         left: 20%;
+         top: 67%;
+         position: absolute;
+         width: 60%;
+         margin-top: 10px;
+       
+    }
+    .about_button{
+        margin-top: 10px;
+        position: absolute;
+        top: 90%;
+        left: 20%;
+    }
+  nav ul{
+    display: none;
+  }
+    .dropdown{
+        position: absolute;
+        display:block;
+        width: 75px;
+        height: 75px;
+        top: 1%;
+        right: 2%;
+        
+    }
+    .col_3 img{
+        margin: 10px 0px;
+        top:38%;
+        right: 25%;
+        width: 200px;
+        height: 200px;
+    }
+    .col_2{
+        right:1%;
+    }
+   
+}
+@media screen and (min-width: 1200px) and (max-width: 2200px){
+.col1 h1{
+    font-size: 90px;
+    color: black;
+}
+}
+
+
 /*CSS for Contact page*/
 .contact{
+   
     width: 100%;
-    height: 85vh;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: linear-gradient(rgba(0,0,0,0.7), red)
+    
 }
 form{
     width: 90%;
     max-width: 600px;
     
 }
+form h2{
+    font-size: 30px;
+    text-shadow: 1px 1px black;
+
+}
 .input-group{
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     position: relative;
 }
 input,textarea{
@@ -225,3 +399,43 @@ h2{
     border-bottom: 1px solid white;
 }
 /*CSS for About-me page*/
+.about-me{
+    position: absolute;
+    top: 20%;
+    width: 40%;
+    height: 50vh;
+    display:inline-block;
+    align-content: center;
+    justify-content: center;
+    z-index: 1;
+}
+.about-me h1{
+    
+    color:white;
+    text-shadow: 1px 1px rgb(0, 121, 117);
+    font-size: 70px;
+}
+.about-me h4{
+   
+    font-size: 20px;
+    text-shadow: 1px 1px black;
+    margin: 10px 0px;
+}
+.about-me p{
+  text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 30px;
+    word-spacing: 5px;
+    background-color: white;
+    text-shadow: 1px 1px rgb(0, 121, 117, .3);
+    box-shadow: 5px 5px 40px rgb(0, 121, 117);
+    margin-top: 20px;
+    border-radius: 40px 0px 40px 0px;
+    padding: 20px 10px;
+}
+#about-I{
+    font-family: 'Water Brush', cursive;
+    Font-size: 35px;
+    
+}
