--- a/Personal_Page/style.css
+++ b/Personal_Page/style.css
@@ -464,29 +464,53 @@ h2{
 /*Project.Html*/
 .container{
     width: 100%;
-    height: 100vh;
+    height: 150vh;
     background-color: rgb(232, 232, 232);
     background-size: cover;
     background-image: linear-gradient(rgb(16, 15, 15), rgba(0, 0, 0, 0.286),rgba(12, 130, 151, 0.392)),url("photos/personal_background.jpg");
 }
 .projects-container{
     position: absolute;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction:row;
-    justify-content: space-between;
-    width: 40%;
-    height: 40vh;
-    top: 20%;
-    left: 30%;
-    
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
+    gap: 100px 20px;
+    width: 60%;
+    height: 60vh;
+    top: 10%;
+    left: 20%;
 }
 .projects{
+
     width: 175px;
-    height: 250px;
+    height: 300px;
+    
+}
+.projects h2{
+    text-shadow: 1px 1px rgb(0, 121, 117);
 }
 .project1{
+    cursor: pointer;
     margin-top: -25px;
     width: 175px;
     height: 250px;
+}
+.project1:hover {
+   cursor: pointer;
+    opacity: .8;
+}
+.project-button{
+    margin-top: 5px;
+    width: 200px;
+}
+ .projects a{
+  display: none;
+     font-size: 15px;
+    border-radius: 20px 30px;
+    margin-right: 5px;
+    text-decoration: none;
+    color: white;
+    padding: 5px 5px;
+    background-color:rgb(0, 121, 117);
+    border: 1px solid rgb(0, 121, 117);
 }
