--- a/Personal_Page/style.css
+++ b/Personal_Page/style.css
@@ -462,7 +462,7 @@ h2{
     
 }
 /*Project.Html*/
-.container{
+.container1{
     width: 100%;
     height: 150vh;
     background-color: rgb(232, 232, 232);
@@ -474,17 +474,21 @@ h2{
     display: grid;
     grid-template-columns: auto auto;
     justify-content: space-evenly;
-    gap: 100px 20px;
+    gap: 60px 20px;
     width: 60%;
     height: 60vh;
     top: 10%;
     left: 20%;
 }
 .projects{
-
+    
     width: 175px;
     height: 300px;
+  
     
+}
+.projects:hover .project-button{
+    display: contents;
 }
 .projects h2{
     text-shadow: 1px 1px rgb(0, 121, 117);
@@ -495,22 +499,11 @@ h2{
     width: 175px;
     height: 250px;
 }
-.project1:hover {
-   cursor: pointer;
-    opacity: .8;
-}
 .project-button{
-    margin-top: 5px;
-    width: 200px;
-}
- .projects a{
-  display: none;
-     font-size: 15px;
-    border-radius: 20px 30px;
+    margin-top: -20px;
+    color: white
     margin-right: 5px;
-    text-decoration: none;
-    color: white;
-    padding: 5px 5px;
-    background-color:rgb(0, 121, 117);
-    border: 1px solid rgb(0, 121, 117);
+    display: none;
 }
+
+
