--- a/Personal_Page/style.css
+++ b/Personal_Page/style.css
@@ -66,6 +66,7 @@ nav ul li a:hover::after{
     width: 100%;
 } 
 span{
+    
     color: rgb(0, 121, 117);
     text-shadow: 1px 1px black;
     cursor:default;
@@ -91,7 +92,7 @@ span{
 .col_1 h3{
     margin-bottom: 5px;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
     text-shadow:2px 2px rgb(16, 15, 15);
     border-style: 1px solid black;
 }
@@ -476,19 +477,19 @@ h2{
     justify-content: space-evenly;
     gap: 60px 20px;
     width: 60%;
-    height: 60vh;
+    height: 100vh;
     top: 10%;
     left: 20%;
 }
 .projects{
     
     width: 175px;
-    height: 300px;
-  
-    
+    height: 300px;  
+    transition: .5s ease-in-out;
 }
-.projects:hover .project-button{
-    display: contents;
+.projects:hover a{
+    opacity:1;
+    display:inline-block;
 }
 .projects h2{
     text-shadow: 1px 1px rgb(0, 121, 117);
@@ -498,12 +499,34 @@ h2{
     margin-top: -25px;
     width: 175px;
     height: 250px;
+    border-radius: 10px;
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
 }
-.project-button{
-    margin-top: -20px;
-    color: white
-    margin-right: 5px;
-    display: none;
+.project1:hover {
+    filter: blur(3px);
+ }
+.buttonContainer{
+   
+    display: inline-block;
+    width: 250px;
+}
+.buttonContainer a{
+    opacity: 0;
+    z-index: 2;
+    color: white;
+    padding: 5px 5px;
+    text-shadow: 1px 1px rgb(0, 121, 117);
+    border-radius: 20px 30px;
+    background-color:rgba(12, 130, 151, 0.392);
+    border: 2px solid rgb(0, 121, 117);
+    text-decoration: none;
+    transition: 1s ease-in-out;
+}
+.buttonContainer a:hover{
+    background-color: white;
+    color: rgb(0, 121, 117);
+    text-shadow: 4px 0px 4px rgb(0, 121, 117);
 }
 
 
